# sagira-bot

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  SECURITY.md  TODOs.md  docker-compose.yml  ideas.md  pyproject.toml  setup.cfg  tox.ini
bot/: __init__.py  __main__.py  bot.py  constants.py  utils.py
bot/cogs/: raid_report.py  schedule.py  testcog.py
config/: filebeat.yml
sagira/: __main__.py  bot.py  constants.py  old_mongo_stuff.txt  utils.py
sagira/cogs/: raid_report.py  schedule.py  testcog.py
